<resources>
    <string name="app_name">The Deliverer</string>
    <string name="AddRider">Rider Registration</string>
    <string name="RiderID">Rider ID</string>
    <string name="RiderName">Rider Name</string>
    <string name="RiderContact">Contact Number</string>
    <string name="VehicleNumber">Vehicle Number</string>
    <string name="AddRiderbtn">Add</string>
    <string name="AddDelivery">Add Delivery</string>
    <string name="DeliveryOrderNumber">Order No</string>
    <string name="AddDeliveryBtn">Add Delivery</string>
    <string name="UpdateDelivery">Update Delivery</string>
    <string name="UpdateDeliveryBtn">Update</string>
    <string name="DeleteDelivery">Delete Delivery</string>
    <string name="DeleteDeliveryBtn">Delete</string>
    <string name="DeliveriesList">Deliveries</string>
    <string name="AddDeliveryDescription">Add delivery details here</string>
    <string name="UpdateDeliveryDescription">Update delivery details here</string>
    <string name="ViewDeliveryDescription">View previously added deliveries</string>
    <string name="AddRiderBtnV">Add Rider</string>
    <string name="DeliveryID">DeliveryID</string>
    <string name="Riders">RIDERS</string>
    <string name="updateDelivery">UPDATE DELIVERY</string>
    <string name="titleRider">Riders</string>
    <string name="RiderFirstName">First Name</string>
    <string name="RiderLastName">Last Name</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="sign_in">SIGN IN</string>
    <string name="last_name">TextView</string>
    <string name="first_name">First Name</string>
    <string name="last__name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="register">REGISTER</string>
    <string name="address">No:01.Wasalla Road</string>
    <string name="pizza">Pizza</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="top_deals">Top Deals</string>
    <string name="todo3">TODO</string>
    <string name="edit_user">EDIT USER</string>
    <string name="adminLogin">LOGIN AS ADMIN</string>
    <string name="userLogin">LOGIN AS USER</string>
    <string name="addAddress">ADD</string>
    <string name="addLater"> ADD LATER</string>
    <string name="add">ADD ITEM</string>
    <string name="update">UPDATE ITEM</string>
    <string name="delete">DELETE ITEM</string>
    <string name="addRider">ADD RIDER</string>
    <string name="viewRider">VIEW RIDER</string>
    <string name="deleteRider">DELETE RIDER</string>
    <string name="title_home">Home</string>
    <string name="back">BACK</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="item1">Cauliflower rice with spicy curry </string>
    <string name="item2">Craving Chicken Fried rice with gravy </string>
    <string name="item3">Seafood Supremo Thin Crust Pizza Large </string>
    <string name="item_name">Item</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_size">Size</string>
    <string name="continue1_btn">Continue</string>
    <string name="continue_shopping_btn">Continue Shopping</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="continue2_btn">Confirm Order</string>
    <string name="cancel_btn">Cancel Order</string>
    <string name="UpdateItem">Update Item</string>
    <string name="UpdateItemDescription">Update Item here</string>
    <string name="delivery">Delivery List</string>
    <string name="itemName">Name</string>
    <string name="itemPrice"> Price</string>
    <string name="userList"> User List</string>
    <string name="item"> Item List</string>
    <string name="itemDetails"> Item Details</string>
    <string name="user"> User</string>
    <string-array name="itemTypeDropdown">
        <item>Main Dish</item>
        <item>Dessert</item>
        <item>Backey</item>
        <item>Pizza</item>
    </string-array>
</resources>