<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thedeliverer.Register"
    android:gravity="center"
    android:background="@color/back"
    >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">



        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/designbutton"
            android:textColor="@color/black"
            android:text="@string/add"
            android:layout_marginVertical="10dp"/>

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/designbutton"
            android:textColor="@color/black"
            android:text="@string/update"/>


        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/designbutton"
            android:textColor="@color/black"
            android:text="@string/delete"
            android:layout_marginVertical="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/addRider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/designbutton"
            android:textColor="@color/black"
            android:text="@string/addRider"
            android:layout_marginVertical="10dp"/>

        <Button
            android:id="@+id/viewRider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/designbutton"
            android:textColor="@color/black"
            android:text="@string/viewRider"/>


        <Button
            android:id="@+id/deleteRider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/designbutton"
            android:textColor="@color/black"
            android:text="@string/deleteRider"
            android:layout_marginVertical="10dp"/>


    </LinearLayout>



</LinearLayout>